# ProductRecommendationSystem

./: .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml
documentation/: data_loader.md  dataloader.drawio  workflow.drawio
environment/: environment.yml
src/: .pre-commit-config.yaml  mypy.ini  pyproject.toml
src/rec_engine/: config.toml
src/rec_engine/code/: azure_utils.py  cf.py  config.py  data_loader.py  data_processer.py  data_processor.py  knn.py  logger.py  model_utils.py  pipeline.py  svd.py  utils.py
src/tests/: conftest.py  test_data_loader.py  test_data_processor.py
src/tests/.test_data/: movies.csv  ratings.csv
